# ETL_Python_DuckDB

./: .gitignore  About_DuckDB.PY  README.md  app.py  exemplo.env  pipeline.py  pyproject.toml  requirements.txt
PLQS_codes/: Create_Tables.sql  ETL_Tables.sql
imgs/: projeto_excalidraw.excalidraw
pasta_gdown/: data.json  data.parquet
