[tool.poetry]
name = "etl-python-duckdb"
version = "0.1.0"
description = ""
authors = ["RafaelAndradeDEV <rafaelandradeoli05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
gdown = "^5.1.0"
duckdb = "^0.10.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
